<resources>
    <string name="app_name">Calculadora</string>
    <string name="distancia">Distancia</string>
    <string name="total_em_km">Total em km</string>
    <string name="pre_o">preço</string>
    <string name="pre_o_total">Preço Total</string>
    <string name="calcular">calcular</string>
    <string name="gasto_total">gasto Total</string>
    <string name="gasto_total_rs">gasto total rs</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="pre_o_total1">Preço Total</string>
    <string name="pedagio">Pedagio</string>
    <string name="gasto_total_r_0"> R$ 0</string>
    <string name="preenchaOscampos"> Preencha todos os campos</string>

</resources>