<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
    android:id="@+id/edit_distance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:autofillHints="phone"
    android:hint="@string/distancia"
    android:inputType="numberDecimal"
    android:textAlignment="center"
    android:textSize="24sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/total_em_km"
        android:textAlignment="center"/>


    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/pre_o"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pre_o_total"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edit_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/kms_por_litro"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edit_pedagio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="phone"
        android:hint="@string/pedagio"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="24sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pre_o_total1"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green"
        android:padding="12dp"
        android:text="@string/calcular"
        android:textSize="20sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/gasto_total"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/text_gasto_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/gasto_total_r_0"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/red"/>



</LinearLayout>